--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   <link rel="stylesheet" href="style.css" />
 <style>
   body {
@@ -97,6 +98,9 @@
             <a class="nav-link active" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#about">Biodata</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
@@ -142,10 +146,14 @@
               <tr>
                 <th>Nama Lengkap</th>
                 <td>Putri Rohmatul Khasanah</td>
+              </tr
+                <tr>
+                <th>Jurusan</th>
+                <td>Rekayasa Perangkat Lunak</td>
               </tr>
               <tr>
                 <th>Tempat, Tanggal Lahir</th>
-                <td>Malang, 15 Mei 2006</td>
+                <td>Malang, 30 Mei 2007</td>
               </tr>
               <tr>
                 <th>Jenis Kelamin</th>
@@ -153,23 +161,19 @@
               </tr>
               <tr>
                 <th>Alamat</th>
-                <td>Jl. Contoh Alamat No. 123, Malang</td>
+                <td>Jl. Bulutangkis Rt.04 Rw.02 Tasikmadu</td>
               </tr>
               <tr>
                 <th>Agama</th>
                 <td>Islam</td>
               </tr>
               <tr>
-                <th>Hobi</th>
-                <td>Membaca, Ngoding, Desain</td>
-              </tr>
-              <tr>
                 <th>Email</th>
-                <td>putri@email.com</td>
+                <td>putrirohmatul969@email.com</td>
               </tr>
               <tr>
                 <th>No. HP</th>
-                <td>0812-3456-7890</td>
+                <td>0895-3233-91087</td>
               </tr>
             </tbody>
           </table>
@@ -259,13 +263,18 @@
         </div>
       </div>
     <!-- Contact -->
-  <section id="contact" class="bg-light text-center">
-    <div class="container">
-      <h2>Kontak</h2>
-      <p class="mt-3">Jika ingin menghubungi saya, bisa melalui:</p>
-      <p>Email: putri@email.com<br>No HP: 0812-3456-7890</p>
-    </div>
-  </section>
+<section id="contact" class="bg-light text-center py-5">
+  <div class="container">
+    <h2>Kontak</h2>
+    <p class="mt-3">Jika ingin menghubungi saya, bisa melalui:</p>
+    <p>
+      <i class="bi bi-envelope-fill text-primary me-2"></i>putri@email.com<br>
+      <i class="bi bi-telephone-fill text-success me-2"></i>0812-3456-7890<br>
+      <i class="bi bi-instagram text-danger me-2"></i>@putrirhmtl<br>
+      <i class="bi bi-whatsapp text-success me-2"></i>0812-3456-7890
+    </p>
+  </div>
+</section>
     <!-- akhir contact -->
     <!-- footer -->
 <div class="footer">
