--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   <link rel="stylesheet" href="style.css" />
 <style>
   body {
@@ -263,18 +262,13 @@
         </div>
       </div>
     <!-- Contact -->
-<section id="contact" class="bg-light text-center py-5">
-  <div class="container">
-    <h2>Kontak</h2>
-    <p class="mt-3">Jika ingin menghubungi saya, bisa melalui:</p>
-    <p>
-      <i class="bi bi-envelope-fill text-primary me-2"></i>putri@email.com<br>
-      <i class="bi bi-telephone-fill text-success me-2"></i>0812-3456-7890<br>
-      <i class="bi bi-instagram text-danger me-2"></i>@putrirhmtl<br>
-      <i class="bi bi-whatsapp text-success me-2"></i>0812-3456-7890
-    </p>
-  </div>
-</section>
+  <section id="contact" class="bg-light text-center">
+    <div class="container">
+      <h2>Kontak</h2>
+      <p class="mt-3">Jika ingin menghubungi saya, bisa melalui:</p>
+      <p>Email: putrirohmatul969@email.com<br>No HP: 0895-3233-9108</p>
+    </div>
+  </section>
     <!-- akhir contact -->
     <!-- footer -->
 <div class="footer">
