--- a/index.html
+++ b/index.html
@@ -270,7 +270,6 @@
 <div class="footer">
   <p>Create with ❤️ by <strong><u>Putri Rohmatul</u></strong></p>
 </div>
-<akhir footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+<!--akhir footer -->
+   </body>
 </html>
