--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <section id="contact" class="bg-light text-center">
     <div class="container">
       <h2>Kontak</h2>
-      <p class="mt-3">Jika ingin menghubungi saya, bisa melalui:</p>
+      <p class="mt-3" style="color: #0D5EA6;">Jika ingin menghubungi saya, bisa melalui:</p>
       <p>Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
     </div>
   </section>
