--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <div class="container">
       <h2>Kontak</h2>
       <p class="mt-3" style="color: #0D5EA6;">Jika ingin menghubungi saya, bisa melalui:</p>
-      <p>Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
+      <p class="mt-3" style="color: #0D5EA6;">Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
     </div>
   </section>
     <!-- akhir contact -->
