--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <section class="jumbotron text-center">
   <img src="ft.jpg" alt="Putri Rohmatul" width="200" height="200" class="rounded-circle img-thumbnail object-fit-cover" style="object-fit: cover;" />
   <h1 class="display-4">Putri Rohmatul</h1>
-  <p class="lead">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
+  <p class="lead" style="color: #0D5EA6;">SMK Negeri 5 Malang | Rekayasa Perangkat Lunak</p>
   
   <div class="container">
     <div class="row justify-content-center">
@@ -259,8 +259,8 @@
   <section id="contact" class="bg-light text-center">
     <div class="container">
       <h2>Kontak</h2>
-      <p class="mt-3">Jika ingin menghubungi saya, bisa melalui:</p>
-      <p>Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
+      <p class="mt-3" style="color: #0D5EA6;">Jika ingin menghubungi saya, bisa melalui:</p>
+      <p class="mt-3" style="color: #0D5EA6;">Email: putrirohmatul969@email.com<br>No HP: 0895-3233-91087</p>
     </div>
   </section>
     <!-- akhir contact -->
